--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css">
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/common.css">
+  </head>
   <body>
-    <h1>Hello world</h1>
+    <nav class="navbar">
+      <p>Leah(Hyerim) Park</p>
+      <ul class="menu">
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="cv.html">CV</a></li>
+      </ul>
+    </nav>
+    <footer>
+      <p>Leah Park</p>
+      <a href="leah.hyerim@gmail.com">
+        <i class="far fa-envelope"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/leahhyerim/">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a href="https://github.com/Leah-Park">
+        <i class="fab fa-github"></i>
+      </a>
+    </footer>
   </body>
 </html>
