Add profile photo

--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,9 @@
       <li><a class="active" href="cv.html">CV</a></li>
     </ul>
   </nav>
+  <div class="content">
     <iframe src="static/Leah_CV.pdf" width="100%" height="800px"></iframe>
+  </div>
     <footer>
       <p>Leah Park</p>
       <a href="leah.hyerim@gmail.com">
