--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <li><a href="cv.html">CV</a></li>
       </ul>
     </nav>
+    <div class="content">
+      <br>I have 6 years of experience as an iOS Developer and have recently changed my skill set to automation testing.<br>
+      I am currently studying at AIIT to become ISTQB certified with a goal to enter the testing job market very soon!<br><br>
+      <div class="image">
+        <img src="static/img/leah.JPG" width="50%">
+      </div>
+    </div>
     <footer>
       <p>Leah Park</p>
       <a href="leah.hyerim@gmail.com">
