--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
     </nav>
     <div class="content">
       <br>I have 6 years of experience as an iOS Developer and have recently changed my skill set to automation testing.<br>
-      I am currently studying at AIIT to become ISTQB certified with a goal to enter the testing job market very soon!<br><br>
+      I am currently studying at AIIT to become an ISTQB certified with a goal to enter the testing job market very soon!<br><br>
       <div class="image">
         <img src="static/img/leah.JPG" width="50%">
       </div>
     </div>
     <footer>
       <p>Leah Park</p>
-      <a href="leah.hyerim@gmail.com">
-        <i class="far fa-envelope"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/leahhyerim/">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-      <a href="https://github.com/Leah-Park">
-        <i class="fab fa-github"></i>
-      </a>
+      <div class="icons">
+        <a href="leah.hyerim@gmail.com">
+          <i class="far fa-envelope"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/leahhyerim/">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/Leah-Park">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
     </footer>
   </body>
 </html>
